# fraud_detection_ai_model

./: .replit  README.md  app.py  config.toml.txt  main.py  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
models/: pretrained_model.joblib  trained_model_logistic_regression.joblib  trained_model_random_forest.joblib  trained_model_xgboost.joblib
modules/: data_processor.py  model_trainer.py  synthetic_generator.py  utils.py  visualizer.py
static/css/: style.css
static/js/: app.js
templates/: index.html
