[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.116.1",
    "imbalanced-learn>=0.14.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.49.0",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.4",
]
